objects/CTE__c.object
<CustomObject>
    <description>CTE</description>
    <fields>
        <fullName>CTE_ID__c</fullName>
        <description>Clinical Trial Educator ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Clinical Trial Educator ID</inlineHelpText>
        <label>CTE ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Clinical_Trial_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Trial Profile</label>
        <referenceTo>Clinical_Trial_Profile__c</referenceTo>
        <relationshipLabel>CTEs</relationshipLabel>
        <relationshipName>CTEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>F2F_Contact_Date__c</fullName>
        <description>Holds the HCP ID for when a CTE made face-to-face contact with an HCP and date of when the contact was made</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the HCP ID for when a CTE made face-to-face contact with an HCP and date of when the contact was made</inlineHelpText>
        <label>F2F Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_and_Last_Name__c</fullName>
        <description>Clinical Trial Educator First and Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Clinical Trial Educator First and Last Name</inlineHelpText>
        <label>First and Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HCP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CTEs (HCP)</relationshipLabel>
        <relationshipName>CTEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HCP_outreach_Status__c</fullName>
        <description>Description of HCP outreach</description>
        <inlineHelpText>Description of HCP outreach</inlineHelpText>
        <label>HCP Outreach Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Contacted</fullName>
                </value>
                <value>
                    <fullName>Open Lead</fullName>
                </value>
                <value>
                    <fullName>Warm Lead</fullName>
                </value>
                <value>
                    <fullName>Agreed to Refer</fullName>
                </value>
                <value>
                    <fullName>Will not Refer</fullName>
                </value>
                <value>
                    <fullName>Non Responsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CTEs (PI)</relationshipLabel>
        <relationshipName>CTE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>CTEs</relationshipLabel>
        <relationshipName>CTEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CTE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CTE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>